--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.7",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
+    "npm": "^8.12.1",
     "vue": "^2.6.14",
     "vue-lang-code-flags": "^1.0.13"
   },
